# vim-format

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  grammar.txt
.github/workflows/: ci.yml  tests.yml
reference/: doc.txt  ex_cmds.txt  grammar.txt  notes.txt
scripts/: cmds.py
src/: AST.cpp  AST.h  ASTParser.cpp  ASTParser.h  ASTVisitor.cpp  ASTVisitor.h  Analyzer.cpp  Analyzer.h  CMakeLists.txt  Context.cpp  Context.h  Controller.cpp  Controller.h  DocBuilder.cpp  DocBuilder.h  DocVisitor.cpp  DocVisitor.h  Exceptions.cpp  Exceptions.h  ExprDisplayVisitor.cpp  ExprDisplayVisitor.h  HybridParser.cpp  HybridParser.h  Lexer.cpp  Lexer.h  Makefile  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  Parser.cpp  Parser.h  PrattParser.cpp  PrattParser.h  PrettyPrinter.cpp  PrettyPrinter.h  Renderer.cpp  Renderer.h  Scope.cpp  Scope.h  (+22 more)
test/: ASTParser_tests.cpp  AST_tests.cpp  CMakeLists.txt  Error_tests.cpp  Functional_tests.cpp  HybridParser_tests.cpp  Lexer_tests.cpp  Parser_tests.cpp  PrattParser_tests.cpp  PrettyPrinter_tests.cpp  Source_tests.cpp  Tokenizer_tests.cpp  Tokens_tests.cpp  Translator_test.cpp  Translator_tests.cpp  Unit_tests.cpp
test/ast/: cmdline.ast  cmdline.vim  comment.ast  eval.ast  eval.vim  expr.ast  expr.vim  func_stmt.ast  if_stmt.ast  if_stmt.vim  lockvar.ast  lockvar.vim  userfunc.ast  userfunc.vim  while_stmt.ast
test/benchmark/: a.vim
test/error/: E116_1.out  E116_1.vim  E116_2.out  E116_2.vim  E125_1.out  E125_1.vim  E1278_1.out  E1278_1.vim  E15_1.out  E15_1.vim  E15_2.out  E15_2.vim  E15_3.out  E15_3.vim  E354_1.out  E354_1.vim  E354_2.out  E354_2.vim  E475_1.out  E475_1.vim  E475_2.out  E475_2.vim  E475_3.out  E475_3.vim  E481_1.out  E481_1.vim  E973_1.out  E973_1.vim  E989_1.out  E989_1.vim
test/pretty/: expr.pretty  expr.pretty.vim  expr.vim
test/res/: expr.ast  expr.vim  func_stmt_01.vim  if_stmt_01.vim  while_stmt_01.ast  while_stmt_01.vim
test/sample/: 02.vim  04.vim  06.vim
